--- a/AgendaWebAPI/AgendaWebAPI.csproj
+++ b/AgendaWebAPI/AgendaWebAPI.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.1"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1"/>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.1"/>
   </ItemGroup>
 </Project>
